recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:5: error: not found: value occurences
    occurences(l.tail,v)+1
    ^Occurrences:8: error: not found: value occurences
    occurences(l.tail,v)
    ^