recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l==Nil){return 0}
  else if(l.head==v){
    occurences(l.tail,v)+1
  }
  else{
    occurences(l.tail,v)
  }
}